lets do projects

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Jamie's Portfolio</title>
 </head>
 <body>
-  <div class="top-border-line"></div>
+  <div class="gradient-border-line"></div>
   <nav>
     <p>Jamie's Blog</p>
     <ul>
@@ -19,5 +19,32 @@
       <li><a href="https://j4mie.me">Portfolio</a></li>
     </ul>
   </nav>
+  <main>
+    <div class="top">
+      <p>19-04-2021 // 11:10am</p>
+      <a href="/">
+        <h1>Expense Tracker</h1>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum turpis lectus, aliquam accumsan orci facilisis in. Pellentesque tellus arcu, scelerisque in nibh et, posuere dapibus turpis. Maecenas vel dui luctus massa luctus lobortis. Nulla accumsan, orci vitae imperdiet volutpat, justo massa finibus ex, eu tincidunt diam lacus a lectus. Donec nec elit id lectus bibendum facilisis. Praesent id eleifend nisl, a malesuada orci. Mauris a ultricies lorem, sit amet interdum augue. </h3>
+      </a>
+    </div>
+    <div class="image">
+      <img src="img/typewriter.svg" alt="" srcset="">
+    </div>
+  </main>
+  <section class="projects">
+    <div class="first-project">
+      First Project
+    </div>
+    <div class="second-project">Second Project</div>
+    <div class="other-projects">      
+      <div class="other-project" id="other-project-1">Other Project 1</div>
+      <div class="other-project" id="other-project-2">Other Project 2</div>
+      <div class="other-project" id="other-project-3">Other Project 3</div>
+    </div>
+  </section>
+  <div class="gradient-border-line"></div>
+  <footer>
+    © 2021 - Jamie Blaut
+  </footer>
 </body>
 </html>
