--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
   <main>
     <div class="top">
-      <p>19-04-2021 // 11:10am</p>
+      <p>Last updated: 19-04-2021 // 11:10am</p>
       <a href="/">
         <h1>Expense Tracker</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum turpis lectus, aliquam accumsan orci facilisis in. Pellentesque tellus arcu, scelerisque in nibh et, posuere dapibus turpis. Maecenas vel dui luctus massa luctus lobortis. Nulla accumsan, orci vitae imperdiet volutpat, justo massa finibus ex, eu tincidunt diam lacus a lectus. Donec nec elit id lectus bibendum facilisis. Praesent id eleifend nisl, a malesuada orci. Mauris a ultricies lorem, sit amet interdum augue. </h3>
@@ -33,13 +33,61 @@
   </main>
   <section class="projects">
     <div class="first-project">
-      First Project
+      <div class="image">
+        <img src="" alt="" srcset="">
+      </div>
+      <div class="text-wrapper">
+        <h2>Project One</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+        </p>
+      </div>
     </div>
-    <div class="second-project">Second Project</div>
+    <div class="second-project">
+      <div class="image">
+        <img src="" alt="" srcset="">
+      </div>
+      <div class="text-wrapper">
+        <h2>Project Two</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+        </p>
+      </div>
+    </div>
     <div class="other-projects">      
-      <div class="other-project" id="other-project-1">Other Project 1</div>
-      <div class="other-project" id="other-project-2">Other Project 2</div>
-      <div class="other-project" id="other-project-3">Other Project 3</div>
+      <div class="other-project" id="other-project-1">
+        <div class="image">
+          <img src="" alt="" srcset="">
+        </div>
+        <div class="text-wrapper">
+          <h2>Project Two</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+          </p>
+        </div>
+      </div>
+      <div class="other-project" id="other-project-2">
+        <div class="image">
+          <img src="" alt="" srcset="">
+        </div>
+        <div class="text-wrapper">
+          <h2>Project Two</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+          </p>
+        </div>
+      </div>
+      <div class="other-project" id="other-project-3">
+        <div class="image">
+          <img src="" alt="" srcset="">
+        </div>
+        <div class="text-wrapper">
+          <h2>Project Two</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
   <div class="gradient-border-line"></div>
