--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
   </nav>
   <main>
     <div class="top">
+      <h1>My Projects</h1>
+      <h3>
+        This blog is used as an extension of my portfolio.
+        It displays all of the projects I've worked on, wether they're personal projects,
+        or something that I've worked on in a bigger team.
+      </h3>
       <p>Last updated: 19-04-2021 // 11:10am</p>
-      <a href="/">
-        <h1>Expense Tracker</h1>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum turpis lectus, aliquam accumsan orci facilisis in. Pellentesque tellus arcu, scelerisque in nibh et, posuere dapibus turpis. Maecenas vel dui luctus massa luctus lobortis. Nulla accumsan, orci vitae imperdiet volutpat, justo massa finibus ex, eu tincidunt diam lacus a lectus. Donec nec elit id lectus bibendum facilisis. Praesent id eleifend nisl, a malesuada orci. Mauris a ultricies lorem, sit amet interdum augue. </h3>
-      </a>
     </div>
     <div class="image">
       <img src="img/typewriter.svg" alt="" srcset="">
@@ -34,7 +36,7 @@
   <section class="projects">
     <div class="first-project">
       <div class="image">
-        <img src="" alt="" srcset="">
+        <img src="img/screenshot.png" alt="" srcset="">
       </div>
       <div class="text-wrapper">
         <h2>Project One</h2>
@@ -45,7 +47,7 @@
     </div>
     <div class="second-project">
       <div class="image">
-        <img src="" alt="" srcset="">
+        <img src="img/screenshot.png" alt="" srcset="">
       </div>
       <div class="text-wrapper">
         <h2>Project Two</h2>
@@ -55,38 +57,38 @@
       </div>
     </div>
     <div class="other-projects">      
-      <div class="other-project" id="other-project-1">
+      <div class="other-project">
         <div class="image">
-          <img src="" alt="" srcset="">
+          <img src="img/screenshot.png" alt="" srcset="">
         </div>
         <div class="text-wrapper">
-          <h2>Project Two</h2>
+          <h2>Project Three</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
           </p>
         </div>
       </div>
-      <div class="other-project" id="other-project-2">
+      <div class="other-project">
         <div class="image">
-          <img src="" alt="" srcset="">
+          <img src="img/screenshot.png" alt="" srcset="">
         </div>
         <div class="text-wrapper">
-          <h2>Project Two</h2>
+          <h2>Project Four</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
           </p>
         </div>
       </div>
-      <div class="other-project" id="other-project-3">
-        <div class="image">
-          <img src="" alt="" srcset="">
-        </div>
-        <div class="text-wrapper">
-          <h2>Project Two</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
-          </p>
-        </div>
+      <div class="other-project">
+      <div class="image">
+        <img src="img/screenshot.png" alt="" srcset="">
+      </div>
+      <div class="text-wrapper">
+        <h2>Project Five</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+        </p>
+      </div>
       </div>
     </div>
   </section>
