remove extra links

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
   <div class="gradient-border-line"></div>
   <nav>
     <p>Jamie's Blog</p>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="https://j4mie.me">Portfolio</a></li>
-    </ul>
+    <div>
+      <a href="https://j4mie.me">Portfolio</a>
+    </div>
   </nav>
   <main>
     <div class="top">
