--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/styles.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Monda:wght@400;700&display=swap" rel="stylesheet"> 
-  <title>Jamie's Portfolio</title>
+  <title>Jamie's Blog</title>
 </head>
 <body>
   <div class="gradient-border-line"></div>
