--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Monda:wght@400;700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Monda:wght@400;700&display=swap"
+    rel="stylesheet">
   <title>Jamie's Blog</title>
 </head>
+
 <body>
   <div class="gradient-border-line"></div>
   <nav>
@@ -33,60 +36,70 @@
   </main>
   <section class="projects">
     <div class="first-project">
-      <div class="image">
-        <img src="img/screenshot.png" alt="" srcset="">
-      </div>
-      <div class="text-wrapper">
-        <h2>Project One</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
-        </p>
-      </div>
+      <a href="/">
+        <div class="image">
+          <img src="img/screenshot.png" alt="" srcset="">
+        </div>
+        <div class="text-wrapper">
+          <h2>Project One</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+          </p>
+        </div>
+      </a>
     </div>
     <div class="second-project">
-      <div class="image">
-        <img src="img/screenshot.png" alt="" srcset="">
-      </div>
-      <div class="text-wrapper">
-        <h2>Project Two</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
-        </p>
-      </div>
+      <a href='/'>
+        <div class="image">
+          <img src="img/screenshot.png" alt="" srcset="">
+        </div>
+        <div class="text-wrapper">
+          <h2>Project Two</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+          </p>
+      </a>
     </div>
-    <div class="other-projects">      
+    </div>
+    <div class="other-projects">
       <div class="other-project">
-        <div class="image">
-          <img src="img/screenshot.png" alt="" srcset="">
-        </div>
-        <div class="text-wrapper">
-          <h2>Project Three</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
-          </p>
-        </div>
-      </div>
-      <div class="other-project">
-        <div class="image">
-          <img src="img/screenshot.png" alt="" srcset="">
-        </div>
-        <div class="text-wrapper">
-          <h2>Project Four</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
-          </p>
-        </div>
+        <a href='/'>
+          <div class="image">
+            <img src="img/screenshot.png" alt="" srcset="">
+          </div>
+          <div class="text-wrapper">
+            <h2>Project Three</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+            </p>
+          </div>
+        </a>
       </div>
       <div class="other-project">
-      <div class="image">
-        <img src="img/screenshot.png" alt="" srcset="">
+        <a href="/">
+          <div class="image">
+            <img src="img/screenshot.png" alt="" srcset="">
+          </div>
+          <div class="text-wrapper">
+            <h2>Project Four</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+            </p>
+          </div>
+        </a>
       </div>
-      <div class="text-wrapper">
-        <h2>Project Five</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
-        </p>
-      </div>
+      <div class="other-project">
+        <a href=''>
+          <div class="image">
+            <img src="img/screenshot.png" alt="" srcset="">
+          </div>
+          <div class="text-wrapper">
+            <h2>Project Five</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
+            </p>
+          </div>
+        </a>
       </div>
     </div>
   </section>
@@ -94,4 +107,5 @@
     © 2021 - Jamie Blaut
   </footer>
 </body>
+
 </html>
