--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 </head>
 
 <body>
+
   <div class="gradient-border-line"></div>
+
   <nav>
     <p>Jamie's Blog</p>
     <div>
       <a href="https://j4mie.me">Portfolio</a>
     </div>
   </nav>
+
   <main>
     <div class="top">
       <h1>My Projects</h1>
@@ -28,12 +31,13 @@
         It displays all of the projects I've worked on, wether they're personal projects,
         or something that I've worked on in a bigger team.
       </h3>
-      <p>Last updated: 19-04-2021 // 11:10am</p>
+      <!-- <p>Last updated: 19-04-2021 // 11:10am</p> -->
     </div>
     <div class="image">
       <img src="img/typewriter.svg" alt="" srcset="">
     </div>
   </main>
+
   <section class="projects">
     <div class="first-project">
       <a href="/">
@@ -48,6 +52,7 @@
         </div>
       </a>
     </div>
+
     <div class="second-project">
       <a href='/'>
         <div class="image">
@@ -58,10 +63,12 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, dolorum ea iste incidunt sunt quia.
           </p>
+        </div>
       </a>
     </div>
-    </div>
+
     <div class="other-projects">
+
       <div class="other-project">
         <a href='/'>
           <div class="image">
@@ -75,6 +82,7 @@
           </div>
         </a>
       </div>
+
       <div class="other-project">
         <a href="/">
           <div class="image">
@@ -88,6 +96,7 @@
           </div>
         </a>
       </div>
+
       <div class="other-project">
         <a href=''>
           <div class="image">
@@ -101,11 +110,15 @@
           </div>
         </a>
       </div>
+
     </div>
+    
   </section>
+
   <footer>
     © 2021 - Jamie Blaut
   </footer>
+
 </body>
 
 </html>
